# laughing-man

./: .gitignore  README.md  augment-data.py  benchmark.py  laughing-person.py  predict.py  requirements.txt  setup.cfg  split-and-augment.py  split.py  train.py  xD
capture-images/: capture.py
laughing_person/: __init__.py  model.py
src/: xD.py
src/xD/: __init__.py  app.py  benchmark.py  capture.py  cli.py  data.py  model.py  split.py  train.py  xD.py
