[metadata]
name = xD
version = 1.0.2
author = Matt
author_email = matt@worldshadowgovernment.com
url = https://github.com/whatever/laughing-person
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = xD, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
install_requires =
    albumentations==1.3.1
    matplotlib==3.8.0
    onnx==1.14.1
    onnxruntime
    onnxruntime-gpu
    opencv-python==4.8.1.78
    Pillow==10.0.1
    torch==2.1.0
    torchvision==0.16.0

[options.entry_points]
console_scripts = 
    my-example-utility = example.example_module:main
    xD = xD:xD

[options.package_data]
example = data/schema.json, *.txt
* = README.md

[tool.setuptools.packages.find]
include = ["foo*"]
namespaces = false
